--- a/plugin/src/main/resources/locale/lang-zh-cn.yml
+++ b/plugin/src/main/resources/locale/lang-zh-cn.yml
@@ -9,7 +9,7 @@ unpaused-renders: <green>恢复了世界 <world> 上进行的渲染
 click-for-help: 点击获取帮助
 plugin-reloaded: <green><name> v<version> 已重新加载
 command:
-  prefix: '<white>[<gradient:#C028FF:#5B00FF>Pl3xMap</gradient>]</white> '
+  prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
   message:
     console-must-specify-player: <red>从控制台执行此命令时必须指定一个玩家
     player-not-found-for-input: <red>没有找到玩家 '<input>'
@@ -19,7 +19,7 @@ command:
     confirmation-required: <red>请输入 /<command> confirm 确认操作
     no-pending-commands: <red>你没有任何待处理的命令
   description:
-    help: 获取 Pl3xmap 的指令帮助
+    help: 获取 squaremap 的指令帮助
     resetmap: 重置指定世界的地图
     confirm: 确认待处理的命令
     reload: 重新加载插件
@@ -41,8 +41,8 @@ command:
     not-hidden: <red><player> 已经在地图中处于显示状态了
     shown: <green><player> 已在地图中显示
 ui:
-  page-title: Pl3xMap - {world}
-  coordinates: 坐标<br/>{x}, {z}
+  page-title: squaremap - {world}
+  coordinates: 坐标<br/><x>, <z>
   sidebar:
     player-list: 玩家列表 ({cur}/{max})
     world-list: 世界列表
@@ -51,7 +51,6 @@ ui:
     world-spawn: 出生点
     world-border: 世界边界
 log:
-  prefix: <dark_aqua>[<light_purple>Pl3xMap</light_purple>]</dark_aqua>
   started-full-render: <dark_aqua>开始世界 <yellow><world></yellow> 的完整渲染
   started-radius-render: <dark_aqua>开始世界 <yellow><world></yellow> 的半径渲染
   scanning-region-files: <yellow>正在扫描区域文件... (这可能需要一点时间)
@@ -65,6 +64,6 @@ log:
   internal-web-started: <green>内部Web服务器已启动于 <bind>:<port>
   internal-web-stopped: <green>内部Web服务器已停止
   internal-web-start-error: 内部Web服务器无法启动
-  could-not-create-directory: 无法创建目录! {path}
-  could-not-save-region: 无法保存 {x},{z} 区域的地图
+  could-not-create-directory: 无法创建目录! <path>
+  could-not-save-region: 无法保存 <x>,<z> 区域的地图
   internal-web-not-running: 内部Web服务器发生错误
