--- a/plugin/src/main/resources/locale/lang-es-es.yml
+++ b/plugin/src/main/resources/locale/lang-es-es.yml
@@ -9,7 +9,7 @@ unpaused-renders: <green>Resumiendo renderizado de <world>
 click-for-help: Click para mostrar ayuda
 plugin-reloaded: <green><name> v<version> recargado
 command:
-  prefix: '<white>[<gradient:#C028FF:#5B00FF>Pl3xMap</gradient>]</white> '
+  prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
   message:
     console-must-specify-player: <red>Debes especificar un jugador como objetivo al usar este comando desde consola
     player-not-found-for-input: <red>No se ha encontrado a ningún jugador como '<input>'
@@ -19,7 +19,7 @@ command:
     confirmation-required: <red>Confirmación requerida. Confirma usando /<command> confirm.
     no-pending-commands: <red>No tienes ninguna orden pendiente.
   description:
-    help: Obtén ayuda para los comandos de Pl3xmap
+    help: Obtén ayuda para los comandos de squaremap
     resetmap: Restablece el mapa de un mundo
     confirm: Confirma una orden pendiente
     reload: Recarga el plugin
@@ -41,8 +41,8 @@ command:
     not-hidden: <red><player> no está oculto en el mapa
     shown: <green><player> ya no está oculto en el mapa
 ui:
-  page-title: Pl3xMap - {world}
-  coordinates: Coordenadas<br/>{x}, {z}
+  page-title: squaremap - {world}
+  coordinates: Coordenadas<br/><x>, <z>
   sidebar:
     player-list: Jugadores ({cur}/{max})
     world-list: Mundos
@@ -51,7 +51,6 @@ ui:
     world-spawn: Spawn
     world-border: Borde del Mundo
 log:
-  prefix: <dark_aqua>[<light_purple>Pl3xMap</light_purple>]</dark_aqua>
   started-full-render: <dark_aqua>Comenzó el renderizado completo del mapa <yellow><world>
   started-radius-render: <dark_aqua>Comenzó el renderizado por radio del mapa <yellow><world>
   scanning-region-files: <yellow>Escaneando archivos de regiones...
@@ -65,6 +64,6 @@ log:
   internal-web-started: <green>Servidor web interno ejecutándose en <bind>:<port>
   internal-web-stopped: <green>Servidor web interno detenido
   internal-web-start-error: El servidor web interno no pudo iniciarse
-  could-not-create-directory: No se pudo crear el directorio {path}
-  could-not-save-region: No se pudo guardar el mapa para la región {x},{z}
+  could-not-create-directory: No se pudo crear el directorio <path>
+  could-not-save-region: No se pudo guardar el mapa para la región <x>,<z>
   internal-web-not-running: Se ha producido un error con el servidor web interno
