--- a/plugin/src/main/resources/locale/lang-zh-cn.yml
+++ b/plugin/src/main/resources/locale/lang-zh-cn.yml
@@ -12,7 +12,7 @@ command:
     player-not-found-for-input: <red>没有找到玩家 '<input>'
     console-must-specify-world: <red>从控制台执行此命令时必须指定一个世界
     no-such-world: <red>没有找到世界 '<world>'
-    map-not-enabled-for-world: <red>世界 '<world>' 的地图没有启用'
+    map-not-enabled-for-world: <red>世界 '<world>' 的渲染未启用'
     confirmation-required: <red>请输入 /<command> confirm 确认操作
     no-pending-commands: <red>你没有任何待处理的命令
         progresslogging:
@@ -42,10 +42,10 @@ command:
     optional-player: 如未指定玩家, 则默认为执行命令的玩家 (控制台执行必须指定一个玩家)
     help-query: 获取帮助
   hide:
-    already-hidden: <red><player> 没有显示在地图中
+    already-hidden: <red><player> 没有在地图中显示
     hidden: <green><player> 已在地图中隐藏
   show:
-    not-hidden: <red><player> 没有隐藏在地图中
+    not-hidden: <red><player> 没有在地图中隐藏
     shown: <green><player> 已在地图中显示
 click-for-help: 点击获取帮助
 click-to-confirm: 点击进行确认
